Replace deadsnakes; python3.5 is in debian testing

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -13,7 +13,7 @@ ADD ./files/etc/apt /etc/apt
 RUN apt-get update --fix-missing && apt-get install -y software-properties-common
 
 # Install a newer version of git
-RUN apt install -t testing git
+RUN apt install -y -t testing git
 
 # 32-bit support
 RUN dpkg --add-architecture i386 && \
@@ -85,11 +85,6 @@ RUN apt-get install -y libcairo2-dev libjpeg62-turbo-dev libgif-dev libpq-dev \
     libboost-all-dev libzmq-dev libwww-curl-perl libbz2-dev dpkg-dev \
     ruby2.1-dev dialog python-gtk2 libpango1.0 libpango1.0-dev \
     libmysqlclient-dev
-
-# Enable repo for alternative python versions
-RUN echo "deb http://ppa.launchpad.net/fkrull/deadsnakes/ubuntu xenial main" > /etc/apt/sources.list.d/deadsnakes.list && \
-    gpg --keyserver keyserver.ubuntu.com --recv-keys DB82666C && \
-    gpg --export DB82666C | apt-key add -
 
 # install ruby/rails/rvm
 ADD ./files/etc/gemrc /etc/gemrc
