--- a/ws-python-plain/Dockerfile
+++ b/ws-python-plain/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get install -y python3 python3-dev python3-pip python3-setuptools \
     ipython3 python3-scipy python3-matplotlib
 
 # Alternative python versions
-RUN apt-get install -y python3.5-complete
+RUN apt-get install -t testing -y python3.5
 
 RUN pip install lpthw.web
 
