--- a/ws-cpp/Dockerfile
+++ b/ws-cpp/Dockerfile
@@ -9,3 +9,5 @@ ADD ./files/workspace /home/ubuntu/workspace
 
 RUN chmod -R g+w /home/ubuntu/workspace && \
     chown -R ubuntu:ubuntu /home/ubuntu/workspace
+
+ADD ./files/check-environment /.check-environment/cpp
