--- a/ws-nodejs/Dockerfile
+++ b/ws-nodejs/Dockerfile
@@ -14,3 +14,5 @@ ADD ./files/workspace /home/ubuntu/workspace
 RUN chown -R ubuntu:ubuntu /home/ubuntu/workspace && \
     sudo -u ubuntu -i bash -l -c "cd /home/ubuntu/workspace && npm install" && \
     rm -rf /home/ubuntu/workspace/.git*
+
+ADD ./files/check-environment /.check-environment/nodejs
