--- a/ws-wordpress/Dockerfile
+++ b/ws-wordpress/Dockerfile
@@ -22,3 +22,5 @@ RUN cd /home/ubuntu/workspace && \
 # Install wp-cli
 RUN curl -o /usr/local/bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x /usr/local/bin/wp
+
+ADD ./files/check-environment /.check-environment/wordpress
