--- a/ws-meteor/Dockerfile
+++ b/ws-meteor/Dockerfile
@@ -6,3 +6,5 @@ ADD ./files /home/ubuntu
 RUN chmod -R g+w /home/ubuntu/workspace && \
     chown -R ubuntu:ubuntu /home/ubuntu && \
     su ubuntu -c bash -c "curl https://install.meteor.com/ | sh"
+
+ADD ./files/check-environment /.check-environment/meteor
