Run apt-get update before trying to install things

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -7,12 +7,13 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN echo "Version 1.13"
 
 # Set mirrors to automatic based off location
+RUN apt-get update
 RUN apt-get install -y curl
 ADD files/auto-sources.sh /var/tmp/auto-sources.sh
 #RUN bash /var/tmp/auto-sources.sh && rm /var/tmp/auto-sources.sh
 
 # Install add-apt-repository script
-RUN apt-get update --fix-missing && apt-get install -y software-properties-common
+RUN apt-get install -y software-properties-common
 # Add a recent version of git
 RUN add-apt-repository -y ppa:git-core/ppa
 # 32-bit support
