--- a/ws-nodejs/Dockerfile
+++ b/ws-nodejs/Dockerfile
@@ -5,8 +5,10 @@ RUN sudo -u ubuntu -i bash -l -c " \
     nvm install 0.8 && \
     nvm install 0.10 && \
     nvm install 0.12 && \
-    nvm install iojs-v3.3.1 && \
-    nvm install 5"
+    nvm install 4 && \
+    nvm install 6 && \
+    nvm install 8 && \
+    nvm use 8"
 
 RUN rm -rf /home/ubuntu/workspace
 ADD ./files/workspace /home/ubuntu/workspace
